     future versions of Pinto.

     New Actions:

     * Kill: Deletes a stack.  This was originally done by the Delete
       action, but that action has been repurposed (see next item).

     * Delete: Permanently removes an archive from the repository and
       removes any reference to it from history.  This action cannot
       be undone.  Highly experimental!

     * Deindex: Removes packages from a stack, but does not cause the
       archive to be removed.

     * Reindex: Adds packages from an existing archive to a stack.  At
       present, this command does not recurse into prereqs, but it
       might in the future.

     * Config: Sets and shows configuration properties for either a
       stack or the whole repository.  This action takes the place of
       Props and Edit, which are now gone.

     * Default: Sets or unsets the default stack.  This action takes
       the place of the 'default' argument on the (now defunct) Edit
       action.

     Interface Changes:

     * You are no longer required to have a default stack.  If you
       choose not to have a default stack, then all Actions will
       require an explicit stack argument.  You can also delete the
       default stack if you desire.

     * I decided that there really isn't a suitable default name for
       the initial stack.  So now you must specify the initial stack
       name when you create the repository.  Otherwise, you'll get a
       bare repository with no stacks.

     * If you Add an archive that is identical to one that is already
       in the repository (i.e. has the same SHA-256 hash and same base
       file name) then Pinto simply re-registers the archive that it
       already has on the target stack.  If archives are identical but
       the file base names do not match, then an error will be thrown.

     * When you copy a stack, its entire history is copied as well.
       This means that you can view the logs and revert the copied